20030901 Remove the find an <n>-bit type stuff as that's now done by
	 libspectrum.
20030912 man/: update man pages for the 0.6.1 release.
20030912 ChangeLog: put in 0.6.0 release date.
20030912 ChangeLog: bring up to date for 0.6.1.
20030912 man/rzxtool.1, man/scl2trd.1: small updates.
20030912 README: update for 0.6.1.
20030913 configure.in: bump version number to 0.6.1.
20030921 rzxdump.c: use libgcrypt 1.1.42.
20031006 rzxcheck.c: return 1 if no signature or unknown key.
20031007 tapeconv.c: remove double-free bug if tape reading fails.
20031009 utils.c: add information from uname() into creator custom data.
20031010 utils.c: on Solaris, uname() returns 1 to indicate success.
20031013 Put libspectrum version into creator information, and ensure that
	 libspectrum_init is called by all programs which use libspectrum
	 functions.
20031014 .cvsignore, configure.in, fuse-utils.gpg.in: add QNX6 package
	 file (thanks, Mike Gorchak).
20031014 configure.in, rzxtool.c, scl2trd.c: we need <strings.h> for
	 strncasecmp on QNX6 (thanks, Mike Gorchak).
20031015 Makefile.am, configure.in: no longer need to explicitly link
	 against libgcrypt (except rzxdump) or zlib.
20031015 Makefile.am: no need to explicitly link against glib either.
20031016 Makefile.am, configure.in: no longer need to find path to glib.
20031020 listbasic.c, snapconv.c: use libspectrum_identify_file_with_class
	 where appropriate.
20031203 Some --enable-warnings cleanups.
20031211 Initial import of Tomaz Kac's z802tzx utility (as snap2tzx).
20031212 Makefile.am, snap2tzx.c: libspectrum-ify the snap reading part
	 of snap2tzx.
20031212 snap2tzx.c: C89 and coding style fixups.
20031216 snap2tzx.c: finish libspectrumification of snap2tzx.
20031216 ChangeLog: bring up to date.
20031218 snap2tzx.c: slow 6000 bps loader down slightly so it works with
	 (more) emulators; this is the only signficant change made between
	 z802tzx 1.0 and z802tzx 1.1.
20031218 COPYING: add a copy of the GPL to the distribution.
